[package]
name = "tictactoe"
version = "0.1.0"
authors = ["prangel-git <62568827+prangel-git@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gts = { git = "https://github.com/prangel-git/agent-environment.git", branch = "main"}
